retoques botones navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-  <nav class="navbar-light bg-light d-flex justify-content-between mt-2">
+  <nav class="navbar-light bg-light d-flex justify-content-between">
     <a class="nav-link navbar-brand ml-4" href="#">(_C)</a>
     <form class="form-inline">
       <input class="form-control mr-sm-2" type="search" placeholder="Que necesitas?" aria-label="Search">
-      <button class="btn btn-outline-success " type="submit">Buscar</button>
+      <button class="btn btn-outline-info " type="submit">Buscar</button>
     </form>
     <button class="btn btn-light">
       <a class="nav-link" href="#">Iniciar sesion</a>
@@ -11,14 +11,14 @@
   </nav>
 
   <div class="d-flex justify-content-between bg-light">
-    <button class="btn btn-light">
-      <a class="nav-link" href="#">Tutoriales</a>
+    <button class="btn btn-light nav-button-4">
+      <a class="nav-link " href="#">Tutoriales</a>
     </button>
-    <button class="btn btn-light">
-      <a class="nav-link" href="#">Preguntas</a>
+    <button class="btn btn-light nav-button-4">
+      <a class="nav-link " href="#">Preguntas</a>
     </button>
-    <button class="btn btn-light">
-      <a class="nav-link" href="#">Fragmentos de codigo</a>
+    <button class="btn btn-light nav-button-4">
+      <a class="nav-link " href="#">Snippets</a>
     </button>
   </div>
 </div>
