--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-navbar></app-navbar>
+<div class="container col-md-12 col-lg-12">
+    <app-navbar></app-navbar>
+</div>
+
 <router-outlet></router-outlet>
