--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
   <nav class="navbar-light bg-light d-flex justify-content-between">
     <a class="nav-link navbar-brand ml-4" href="#">(_C)</a>
     <form class="form-inline">
