portal terminado y dark mode

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="container col-md-12 col-lg-12">
     <app-navbar></app-navbar>
+        <app-portal></app-portal>
+    
 </div>
 
 <router-outlet></router-outlet>
