--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,41 +1,19 @@
 <div>
-  <nav class="navbar-light bg-light d-flex justify-content-between">
-    <a class="nav-link navbar-brand ml-4" href="#">(_C)</a>
+
+
+
+  <nav class="navbar-dark bg-dark d-flex justify-content-around">
+  
+    <a class="nav-link navbar-brand ml-4 " href="#">code(_c)ave</a>
     <form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Que necesitas?" aria-label="Search">
-      <button class="btn btn-outline-info " type="submit">Buscar {{this.oSections}}</button>
+      <input class="form-control mr-sm-2 bg-dark" type="search" placeholder="Que necesitas?" aria-label="Search">
+      <button class="btn btn-info" type="submit">Buscar</button>
     </form>
-    <button class="btn btn-light">
+    <button class="btn btn-info btn-sm">
       <a class="nav-link" href="#">Iniciar sesion</a>
     </button>
   </nav>
 
-  <div class="d-flex justify-content-between bg-light">
-    <button class="btn btn-light nav-button-4" (click)="mostrarTutoriales()">
-      <a class="nav-link " href="#">Tutoriales</a>
-    </button>
-    <button class="btn btn-light nav-button-4" (click)="mostrarPreguntas()">
-      <a class="nav-link" href="#">Preguntas</a>
-    </button>
-    <button class="btn btn-light nav-button-4" (click)="mostrarSnippets()">
-      <a class=" nav-link" href="#">Snippets</a>
-    </button>
-  </div>
-
-  <div id="section" *ngIf="oTutoriales == true">
-    <app-tutoriales></app-tutoriales>
-  </div>
-  <div id="section" *ngIf="oPreguntas == true">
-    <app-preguntas></app-preguntas>
-  </div>
-  <div id="section" *ngIf="oSnippets == true">
-    <app-snippets></app-snippets>
-  </div>
-  <div class="empty-img" *ngIf="empty == true">
-    <app-empty></app-empty> 
-    
-  </div>
-
-
+  
 
 </div>
