--- a/src/app/components/secciones/snippets/snippets.component.html
+++ b/src/app/components/secciones/snippets/snippets.component.html
@@ -1,32 +1,11 @@
-<div class="card">
-    <div class="card-header">
-      SNIPPET
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">codigo</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Responder</a>
-    </div>
+<div class="card bg-dark text-white mb-2 mt-2">
+  <div class="card-header">
+    Snippet
   </div>
+  <div class="card-body">
+    <h5 class="card-title">snippet</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-info">Responder</a>
+  </div>
+</div>
 
-  <div class="card">
-    <div class="card-header">
-      SNIPPET
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">codigo</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Responder</a>
-    </div>
-  </div>
-
-  <div class="card">
-    <div class="card-header">
-      SNIPPET
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">codigo</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Responder</a>
-    </div>
-  </div>
