--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-color: #393e46;
+    background-color: #222831;
 }
