--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container col-md-12 col-lg-12">
+<div class="container col-md-12 col-lg-12 col-sm-12">
     <app-navbar></app-navbar>
         <app-portal></app-portal>
     
