--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,19 +1,45 @@
-<div>
-
-
+<div class="md-lg">
 
   <nav class="navbar-dark bg-dark d-flex justify-content-around">
-  
+
     <a class="nav-link navbar-brand ml-4 " href="#">code(_c)ave</a>
     <form class="form-inline">
       <input class="form-control mr-sm-2 bg-dark" type="search" placeholder="Que necesitas?" aria-label="Search">
       <button class="btn btn-info" type="submit">Buscar</button>
     </form>
     <button class="btn btn-info btn-sm">
-      <a class="nav-link" href="#">Iniciar sesion</a>
+      <a class="nav-link" href="#">Ingresar</a>
     </button>
   </nav>
 
-  
+</div>
+
+<div class="sm">
+
+  <div class="pos-f-t">
+    <div class="collapse" id="navbarToggleExternalContent">
+      <div class="bg-dark p-4 ">
+        <form class="form-inline search d-flex justify-content-between">
+          <div>
+            <input class="form-control mr-sm-2 bg-dark" type="search" placeholder="Que necesitas?"
+            aria-label="Search">
+          <button class="btn btn-info" type="submit">Buscar</button>
+          </div>
+          <button class="btn btn-info btn-sm">
+            <a class="nav-link" href="#">Ingresar</a>
+          </button>
+        </form>
+        
+      </div>
+    </div>
+    <nav class="navbar navbar-dark bg-dark">
+      <a class="nav-link navbar-brand ml-4 " href="#">code(_c)ave</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent"
+        aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </nav>
+  </div>
+
 
 </div>
