--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -83,7 +83,7 @@
           Acceder a code(_c)ave
         </div>
         <div class="card-body">
-          <button type="button" class="btn btn-block btn-info btn-lg mr-3"><span class="fa fa-google mr-4"></span>Ingresar con Google</button>
+          <button type="button" class="btn btn-block btn-info btn-lg mr-3" (click)="loginGoogle()"><span class="fa fa-google mr-4"></span>Ingresar con Google</button>
           <button type="button" class="btn btn-block btn-info btn-lg mr-3"><span class="fa fa-github mr-4"></span>Ingresar con GitHub</button>
         </div>
       </div>
