--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,22 +2,14 @@
   <nav class="navbar-dark bg-dark d-flex justify-content-around">
     <a class="nav-link navbar-brand ml-4 " href="#">code(_c)ave</a>
     <form class="form-inline">
-      <input
-        class="form-control mr-sm-2 bg-dark"
-        type="search"
-        placeholder="Que necesitas?"
-        aria-label="Search"
-      />
+      <input class="form-control mr-sm-2 bg-dark" type="search" placeholder="Que necesitas?" aria-label="Search" />
       <button class="btn btn-info" type="submit">Buscar</button>
     </form>
-    <button class="btn btn-info btn-sm">
-      <a
-        class="nav-link"
-        href="#"
-        data-toggle="modal"
-        data-target="#exampleModal"
-        >Ingresar</a
-      >
+    <button class="btn btn-info btn-sm" *ngIf="!isLogged">
+      <a class="nav-link" href="#" data-toggle="modal" data-target="#ingresar">Ingresar</a>
+    </button>
+    <button class="btn btn-info btn-sm" *ngIf="isLogged">
+      <a class="nav-link" (click)="logout()">Salir</a>
     </button>
   </nav>
 </div>
@@ -28,37 +20,23 @@
       <div class="bg-dark p-4 ">
         <form class="form-inline search d-flex justify-content-between">
           <div>
-            <input
-              class="form-control mr-sm-2 bg-dark"
-              type="search"
-              placeholder="Que necesitas?"
-              aria-label="Search"
-            />
+            <input class="form-control mr-sm-2 bg-dark" type="search" placeholder="Que necesitas?"
+              aria-label="Search" />
             <button class="btn btn-info" type="submit">Buscar</button>
           </div>
-          <button class="btn btn-info btn-sm">
-            <a
-              class="nav-link"
-              href="#"
-              data-toggle="modal"
-              data-target="#exampleModal"
-              >Ingresar</a
-            >
+          <button class="btn btn-info btn-sm" *ngIf="!isLogged">
+            <a class="nav-link" href="#" data-toggle="modal" data-target="#ingresar">Ingresar</a>
+          </button>
+          <button class="btn btn-info btn-sm" *ngIf="isLogged">
+            <a class="nav-link" (click)="logout()">Salir</a>
           </button>
         </form>
       </div>
     </div>
     <nav class="navbar navbar-dark bg-dark">
       <a class="nav-link navbar-brand ml-4 " href="#">code(_c)ave</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarToggleExternalContent"
-        aria-controls="navbarToggleExternalContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent"
+        aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
     </nav>
@@ -68,14 +46,8 @@
 </div>
 
 <!-- Modal -->
-<div
-  class="modal fade black"
-  id="exampleModal"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
+<div class="modal fade black" id="ingresar" tabindex="-1" role="dialog" aria-labelledby="ingresarLabel"
+  aria-hidden="true">
   <div class="modal-dialog modal-dark" role="document">
     <div class="modal-content">
       <div class="card bg-dark text-white mb-2 mt-2">
@@ -83,8 +55,18 @@
           Acceder a code(_c)ave
         </div>
         <div class="card-body">
-          <button type="button" class="btn btn-block btn-info btn-lg mr-3" (click)="loginGoogle()"><span class="fa fa-google mr-4"></span>Ingresar con Google</button>
-          <button type="button" class="btn btn-block btn-info btn-lg mr-3"><span class="fa fa-github mr-4"></span>Ingresar con GitHub</button>
+          <button type="button" class="btn btn-block btn-info btn-lg mr-3" (click)="loginGoogle()">
+            <span class="fa fa-google mr-4"></span>Ingresar con Google
+          </button>
+          <button type="button" class="btn btn-block btn-info btn-lg mr-3">
+            <span class="fa fa-github mr-4"></span>Ingresar con GitHub
+          </button>
+        </div>
+        <div class="recibirUsuario" *ngIf="isLogged">
+          <form>
+
+
+          </form>
         </div>
       </div>
     </div>
