--- a/front/src/app/components/sections/preguntas/preguntas.component.html
+++ b/front/src/app/components/sections/preguntas/preguntas.component.html
@@ -1,11 +1,19 @@
-<div class="card bg-dark text-white mb-2 mt-2">
-  <div class="card-header">
-    Pregunta
-  </div>
-  <div class="card-body">
-    <h5 class="card-title">pregunta</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-info">Responder</a>
+
+<div *ngFor="let pregunta of preguntaService.preguntas">
+  <div class="card bg-dark text-white mb-2 mt-2">
+    <div class="card-header">
+      {{ pregunta.pregunta }}
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">pregunta</h5>
+      <p class="card-text">
+        Categoría:
+        {{ pregunta.categoria }}
+      </p>
+      <p>
+        {{ pregunta.desarrollo }}
+      </p>
+      <a href="#" class="btn btn-info">Responder</a>
+    </div>
   </div>
 </div>
-
