--- a/front/src/app/components/getOne/tutorial/tutorial.component.html
+++ b/front/src/app/components/getOne/tutorial/tutorial.component.html
@@ -1,11 +1,11 @@
 <div class="card bg-dark text-white mb-2 mt-2">
   <div class="card-header">
-    <a onclick="" class="btn btn-info">Tutorial</a>
+    <a href="#" class="btn btn-info">Tutorial</a>
   </div>
   <div class="card-body">
     <h5 class="card-title">tutorial</h5>
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a onclick="" class="btn btn-info">Responder</a>
+    <a href="#" class="btn btn-info">Responder</a>
   </div>
 </div>
 
