--- a/front/src/app/components/sections/snippets/snippets.component.html
+++ b/front/src/app/components/sections/snippets/snippets.component.html
@@ -16,7 +16,7 @@
       <p>
         {{ snippet.likes }}
       </p>
-      <a (click)="verPregunta(snippet._id)" class="btn btn-info">Responder</a>
+      <a (click)="verSnippet(snippet._id)" class="btn btn-info">Responder</a>
       <button (click)="darLike(snippet)" class="btn btn-danger">like</button>
       {{ snippet.creador }}
     </div>
