--- a/front/src/app/components/sections/tutoriales/tutoriales.component.html
+++ b/front/src/app/components/sections/tutoriales/tutoriales.component.html
@@ -1,11 +1,23 @@
-<div class="card bg-dark text-white mb-2 mt-2">
-  <div class="card-header">
-    <a onclick="" class="btn btn-info">Tutorial</a>
-  </div>
-  <div class="card-body">
-    <h5 class="card-title">tutorial</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a onclick="" class="btn btn-info">Responder</a>
+<div *ngFor="let tutorial of tutorialService.tutoriales">
+  <div class="card bg-dark text-white mb-2 mt-2">
+    <div class="card-header">
+      {{ tutorial.title }}
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Snippet</h5>
+      <p class="card-text">
+        Categoria:
+        {{ tutorial.categoria }}
+      </p>
+      <p>
+        {{ tutorial.contenido }}
+      </p>
+      <p>
+        {{ tutorial.likes }}
+      </p>
+      <a (click)="verTutorial(tutorial._id)" class="btn btn-info">Responder</a>
+      <button (click)="darLike(tutorial)" class="btn btn-danger">like</button>
+      {{ tutorial.creador }}
+    </div>
   </div>
 </div>
-
