mejoras en login

--- a/front/src/app/components/users/login/login.component.html
+++ b/front/src/app/components/users/login/login.component.html
@@ -17,8 +17,7 @@
       </div>
     </div>
 
-    <!-- <div *ngIf="registerButtons"> -->
-    <div>
+    <div *ngIf="registerButtons">
       <div class="card bg-dark text-white mb-2 mt-2">
         <div class="card-body">
           <h4 class="mb-3">Completa tu perfil</h4>
