--- a/front/src/app/components/users/profile/profile.component.html
+++ b/front/src/app/components/users/profile/profile.component.html
@@ -1,22 +1,68 @@
-<section id="profile" class="container">
+<!-- <section id="profile" class="container">
   <div class="row mt-5">
     <div class="row">
       <div class="col-lg-12 col-sm-12 col-12 profile-header"></div>
     </div>
-    <div class="user-details justify-content-flex-start">
-      <div class="image-profile col-sm-12 col-md-5 col-lg-4">
+    <div class="user-details justify-content-between d-flex">
+      <div
+        class="detail justify-content-center d-flex col-sm-12 col-md-5 col-lg-4 d-flex"
+      >
         <img
           src="{{ user.photoUrl }}"
-          class="rounded-circle img-thumbnail"
+          class="rounded-circle img-thumbnail img-profile center"
           alt="profile"
         />
       </div>
-      <div class="details image-profile col-sm-12 col-md-5 col-lg-4">
-        <b
-          ><h3>{{ user.username }}</h3></b
-        >
+      <div class="detail col-sm-12 col-md-5 col-lg-4">
+        <b>
+          <h3>{{ user.username }}</h3>
+        </b>
         <p>{{ user.email }}</p>
+        <p>{{ user.bio }}</p>
+        <div class="git"></div>
       </div>
     </div>
   </div>
-</section>
+</section> -->
+
+<div class="card hovercard">
+  <div class="cardheader"></div>
+  <div class="avatar">
+    <img alt="" src="{{ user.photoUrl }}" />
+  </div>
+  <div class="info">
+    <div class="title">
+      <a target="_blank">{{ user.username }}</a>
+    </div>
+    <div class="desc">{{ user.bio }}</div>
+  </div>
+  <!-- <div class="bottom">
+    <a
+      class="btn btn-primary btn-twitter btn-sm"
+      href="https://twitter.com/webmaniac"
+    >
+      <i class="fa fa-twitter"></i>
+    </a>
+    <a
+      class="btn btn-danger btn-sm"
+      rel="publisher"
+      href="https://plus.google.com/+ahmshahnuralam"
+    >
+      <i class="fa fa-google-plus"></i>
+    </a>
+    <a
+      class="btn btn-primary btn-sm"
+      rel="publisher"
+      href="https://plus.google.com/shahnuralam"
+    >
+      <i class="fa fa-facebook"></i>
+    </a>
+    <a
+      class="btn btn-warning btn-sm"
+      rel="publisher"
+      href="https://plus.google.com/shahnuralam"
+    >
+      <i class="fa fa-behance"></i>
+    </a>
+  </div> -->
+</div>
