--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,2 +1,9 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div *ngIf="!cargando; else showLoading">
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
+</div>
+<ng-template #showLoading>
+  <div *ngIf="cargando" >
+    <div class="lds-hourglass"></div>
+  </div>
+</ng-template>
