descripcion de medallas

--- a/front/src/app/components/users/profile/profile.component.html
+++ b/front/src/app/components/users/profile/profile.component.html
@@ -28,6 +28,12 @@
           class="medal mr-2"
         />
       </div>
+      <div
+        *ngFor="let altMedalla of altMedallas"
+        class="justify-content-start "
+      >
+        <p>{{ altMedalla }}</p>
+      </div>
     </div>
   </div>
 </div>
