--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -57,7 +57,9 @@
         class="btn btn-info "
         *ngIf="isLogged"
         (click)="logout()"
-      ></button>
+      >
+        Salir
+      </button>
       <button
         class="navbar-toggler"
         type="button"
